main.css
* {
  font-family: "PT Sans", sans-serif;
}
body {
  background-image: url("img/bground.jpg");
  background-size: cover;
  overflow-x: hidden;
  /* background-color: red; */
  background-repeat: no-repeat;
  /* background-position-y: 45px; */
}
#scrolling-wrapper {
  display: flex;
  flex-wrap: nowrap;
  overflow-x: auto;
  /* border: 1px solid red; */
  width: 98%;
  margin: auto;
  position: relative;
  top: 9%;
  transform: perspective(1px) translateY(-10%);
  height: 55%;
  padding-right: 10px;
}
#card {
  flex: 0 0 auto;
  padding: 10px;
  width: 32%;
  height: 85%;
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  border-radius: 10px;
  box-shadow: 0 2px 6px 0 hsl(0, 0%, 0%, 0.2);
  margin: 20px;
}
#blank {
  width: 1px;
  height: 1px;
  padding: 1px;
  margin: 1px;
}
#time {
  font-size: 1.75em;
  /* border: 1px solid green; */
  text-align: center;
  margin-top: 35px;
}
#date {
  font-size: 1.75em;
  /* border: 1px solid blue; */
  text-align: center;
  margin-top: 35px;
}
#weather {
  font-size: 1.75em;
  /* border: 1px solid red; */
}
#top {
  /* border: 1px solid purple; */
  margin-bottom: -65px;
  width: 100%;
  text-align: center;
  margin-top: -15px;
  /* background-color: red; */
}
.weatherwidget-io {
  height: 200px;
  color: #4c4c4c;
}
#datetime {
  margin-top: 10px;
}

